# socket_demo

./: CMakeLists.txt  README.md
docs/: UDP多播收发.md
include/common/: big_string.h  headers.h  packet.h  transfer.h
include/tcp/: client.h  server.h
include/udp/: piece_merge.h  udp_client.h  udp_server.h
include/unix_socket/stream/: client.h  server.h
src/: main.cpp
src/common/: transfer.cpp
src/tcp/: client.cpp  server.cpp
src/udp/: piece_merge.cpp  udp_client.cpp  udp_server.cpp
src/unix_socket/stream/: client.cpp  server.cpp
